--- a/PatientRecordMVVM/Views/PrintPreviewControl.xaml
+++ b/PatientRecordMVVM/Views/PrintPreviewControl.xaml
@@ -7,6 +7,7 @@
              FontFamily="{materialDesign:MaterialDesignFont}"
              xmlns:local="clr-namespace:PatientRecordMVVM.Views"
              xmlns:controls ="clr-namespace:PatientRecordMVVM.Controls"
+             xmlns:language ="clr-namespace:PatientRecordMVVM.Utilities"
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="730" Background="#e2eaec" BorderBrush="#e2eaec">
     <Grid>
@@ -37,7 +38,7 @@
             </Grid>
             
             <!--Sub grid 1-->
-            <Grid Grid.Row="1" Grid.ColumnSpan="3" HorizontalAlignment="Center" VerticalAlignment="Stretch" Margin="25,7,25,0">
+            <Grid Grid.Row="1" Grid.ColumnSpan="3" HorizontalAlignment="Center" VerticalAlignment="Stretch" Margin="25,0,25,0">
                 <!--User's image View and name-->
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Ellipse Width="100" Height="100">
@@ -45,16 +46,17 @@
                             <ImageBrush x:Name="ImageViewer2" ImageSource="{Binding PatientImageSource}"/>
                         </Ellipse.Fill>
                     </Ellipse>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,0">
-                        <Label Style="{StaticResource LabelStyles}" FontSize="14" Margin="0">Patient Name :</Label>
-                        <Label x:Name="ViewName" Content="{Binding PatientName}" Style="{StaticResource LabelStyleControl}"/>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,-15,0">
+                        <!--<Label  Content="{language:Localization PName}" Style="{StaticResource PreviewLabelStyles}"/>-->
+                        <!--<Label Style="{StaticResource PreviewLabelStyles}">:</Label>-->
+                        <Label x:Name="ViewName" Content="{Binding PatientName}" Style="{StaticResource LabelStyleControl}" FontSize="16"/>
                     </StackPanel>
                 </StackPanel>
             </Grid>
 
             <!--Sub grid 2-->
-            <StackPanel Grid.Row="2" Grid.ColumnSpan="3" Orientation="Vertical" HorizontalAlignment="Stretch"  VerticalAlignment="Center" Margin="25,-5,0,0">
-                <TextBlock Style="{StaticResource TextBlockStyleControl}">Patient Personal Information</TextBlock>
+            <StackPanel Grid.Row="2" Grid.ColumnSpan="3" Orientation="Vertical" HorizontalAlignment="Stretch"  VerticalAlignment="Center" Margin="25,-12,0,0">
+                <TextBlock Text="{language:Localization PersonalInfo}" Style="{StaticResource TextBlockStyleControl}"/>
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="500*"/>
@@ -67,24 +69,36 @@
                     </Grid.RowDefinitions>
 
                     <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" Margin="10,5">
-                        <Label Style="{StaticResource PreviewLabelStyles}" >Address :</Label>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="{language:Localization PAddress}" Style="{StaticResource PreviewLabelStyles}" />
+                            <Label Style="{StaticResource PreviewLabelStyles}" Margin="0,0,10,0">:</Label>
+                        </StackPanel>
                         <Label x:Name="ViewANum" Content="{Binding PatientAddress.Number}" Style="{StaticResource LabelStyleControl}"/>
                         <Label x:Name="ViewAStrt" Content="{Binding PatientAddress.Street}" Style="{StaticResource LabelStyleControl}"/>
                         <Label x:Name="ViewACity" Content="{Binding PatientAddress.City}" Style="{StaticResource LabelStyleControl}"/>
                     </StackPanel>
 
                     <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Vertical" Margin="27,5,0,10">
-                        <Label  Style="{StaticResource PreviewLabelStyles}">Gender :</Label>
+                        <StackPanel Orientation="Horizontal">
+                            <Label  Content="{language:Localization PGender}" Style="{StaticResource PreviewLabelStyles}"/>
+                            <Label Style="{StaticResource PreviewLabelStyles}" Margin="0,0,10,0">:</Label>
+                        </StackPanel>
                         <Label x:Name="ViewGender" Content="{Binding PatientGender}" Style="{StaticResource LabelStyleControl}"/>
                     </StackPanel>
 
                     <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" Margin="10,5">
-                        <Label  Style="{StaticResource PreviewLabelStyles}">Date of Birth :</Label>
+                        <StackPanel Orientation="Horizontal">
+                            <Label   Content="{language:Localization PBirthdate}" Style="{StaticResource PreviewLabelStyles}"/>
+                            <Label Style="{StaticResource PreviewLabelStyles}" Margin="0,0,10,0">:</Label>
+                        </StackPanel>
                         <Label x:Name="ViewDob" Content="{Binding PatientDateOfBirth}" Style="{StaticResource LabelStyleControl}"/>
                     </StackPanel>
 
                     <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="27,5,0,5">
-                        <Label Style="{StaticResource PreviewLabelStyles}">Age :</Label>
+                        <StackPanel Orientation="Horizontal">
+                            <Label  Content="{language:Localization PAge}" Style="{StaticResource PreviewLabelStyles}"/>
+                            <Label Style="{StaticResource PreviewLabelStyles}" Margin="0,0,10,0">:</Label>
+                        </StackPanel>
                         <Label x:Name="ViewAge" Content="{Binding PatientAge}" Style="{StaticResource LabelStyleControl}"/>
                     </StackPanel>
                 </Grid>
@@ -92,8 +106,8 @@
 
             <!--Sub grid 3-->
             <StackPanel Grid.Row="3" Grid.ColumnSpan="3" Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="25,5,0,0">
-                <TextBlock Style="{StaticResource TextBlockStyleControl}">Patient Medical Information</TextBlock>
-                    <Grid>
+                <TextBlock Text="{language:Localization MedicalInfo}" Style="{StaticResource TextBlockStyleControl}"/>
+                <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="500*"/>
                         <ColumnDefinition Width="500*"/>
@@ -105,25 +119,34 @@
                     </Grid.RowDefinitions>
 
                     <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" Margin="10,5">
-                        <Label Style="{StaticResource PreviewLabelStyles}">Department :</Label>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="{language:Localization PDepartment}" Style="{StaticResource PreviewLabelStyles}"/>
+                            <Label Style="{StaticResource PreviewLabelStyles}" Margin="0,0,10,0">:</Label>
+                        </StackPanel>
                         <Label x:Name="ViewDepartment" Content="{Binding PatientDepartment}" Style="{StaticResource LabelStyleControl}"/>
                     </StackPanel>
 
                     <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Vertical" Margin="30,5,10,0">
-                        <Label  Style="{StaticResource PreviewLabelStyles}">Doctor in Charge :</Label>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="{language:Localization PDocInCharge}" Style="{StaticResource PreviewLabelStyles}"/>
+                            <Label Style="{StaticResource PreviewLabelStyles}" Margin="0,0,10,0">:</Label>
+                        </StackPanel>
                         <Label x:Name="ViewWard" Content="{Binding PatientDotorcInCharge}" Style="{StaticResource LabelStyleControl}"/>
                     </StackPanel>
 
                     <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" Margin="10,5,5,10">
-                        <Label  Style="{StaticResource PreviewLabelStyles}">Ward :</Label>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="{language:Localization PWard}" Style="{StaticResource PreviewLabelStyles}"/>
+                            <Label Style="{StaticResource PreviewLabelStyles}" Margin="0,0,10,0">:</Label>
+                        </StackPanel>
                         <Label x:Name="ViewDoc" Content="{Binding PatientWard}" Style="{StaticResource LabelStyleControl}"/>
                     </StackPanel>
                 </Grid>
             </StackPanel>
         </Grid>
         <StackPanel Grid.Row="2" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="20,10,26,0">
-            <Button Command="{Binding Path=ConfigureAndPrintCommand}" CommandParameter="{Binding ElementName=MainSubGrid}" Style="{DynamicResource MaterialDesignRaisedLightButton}" Foreground="White" FontWeight="Normal" Content="Configure Print" Background="#58af9d" BorderBrush="#58af9d" Width="125" Margin="0,0,8,0"/>
-            <Button Command="{Binding Path=DefaultPrintCommand}" CommandParameter="{Binding ElementName=MainSubGrid}" Style="{DynamicResource MaterialDesignRaisedLightButton}" Foreground="White" FontWeight="Normal" Content="Default Print" Background="#1A365D" BorderBrush="#1A365D" Width="125"/>
+            <Button Content="{language:Localization ConfigurePrint}" Command="{Binding Path=ConfigureAndPrintCommand}" CommandParameter="{Binding ElementName=MainSubGrid}" Style="{DynamicResource MaterialDesignRaisedLightButton}" Foreground="White" FontWeight="Normal" Background="#58af9d" BorderBrush="#58af9d" Width="145" Margin="0,0,8,0"/>
+            <Button Content="{language:Localization DefaultPrint}" Command="{Binding Path=DefaultPrintCommand}" CommandParameter="{Binding ElementName=MainSubGrid}" Style="{DynamicResource MaterialDesignRaisedLightButton}" Foreground="White" FontWeight="Normal" Background="#1A365D" BorderBrush="#1A365D" Width="145"/>
             
         </StackPanel>
     </Grid>
