--- a/PatientRecordMVVM/Controls/UserControlHeader.xaml
+++ b/PatientRecordMVVM/Controls/UserControlHeader.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PatientRecordMVVM.Controls"
-             xmlns:lang ="clr-namespace:PatientRecordMVVM.Resources"
+             xmlns:language ="clr-namespace:PatientRecordMVVM.Utilities"
              mc:Ignorable="d" 
              d:DesignHeight="150" d:DesignWidth="800" Background="White">
 
@@ -24,17 +24,17 @@
 
         <!--Patient Id block-->
         <StackPanel Grid.ColumnSpan="2" Style="{StaticResource StackpanelStyle}">
-            <Label Content="{x:Static lang:UILanguage.PatientId}" FontSize="16" FontWeight="Normal" Foreground="White"/>
+            <Label Content="{language:Localization PatientId}" FontSize="16" FontWeight="Normal" Foreground="White"/>
             <Label Content="{Binding Path=GuidGenerator}" FontSize="16" Foreground="White" Margin="5,0"/>
         </StackPanel>
 
         <!--Date block-->
         <StackPanel  Grid.ColumnSpan="3"  Style="{StaticResource StackpanelStyle}" HorizontalAlignment="Right">
-            <Label Content="{x:Static lang:UILanguage.Date}" FontSize="16" FontWeight="Normal" Foreground="White"/>
+            <Label Content="{language:Localization Date}" FontSize="16" FontWeight="Normal" Foreground="White"/>
             <Label Name="date_time" Content="{Binding Path=CurrentDate}" FontSize="16" Foreground="White" Margin="5,0"/>
         </StackPanel>
 
         <!--Title block-->
-        <TextBlock Text="{x:Static lang:UILanguage.MainTitle}" Grid.Row="1" Grid.ColumnSpan="3" FontSize="20" FontWeight="Normal" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="200"/>
+        <TextBlock Text="{language:Localization MainTitle}" Grid.Row="1" Grid.ColumnSpan="3" FontSize="20" FontWeight="Normal" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="200"/>
     </Grid>
 </UserControl>
