--- a/PatientRecordMVVM/Views/HomeCareMainWindow.xaml
+++ b/PatientRecordMVVM/Views/HomeCareMainWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:local="clr-namespace:PatientRecordMVVM.Views"
         xmlns:vm ="clr-namespace:PatientRecordMVVM.ViewModels"
         xmlns:controls ="clr-namespace:PatientRecordMVVM.Controls"
-        xmlns:lang ="clr-namespace:PatientRecordMVVM.Resources"
+        xmlns:language ="clr-namespace:PatientRecordMVVM.Utilities"
         mc:Ignorable="d"
         Height="850" Width="1500" Foreground="White">
     <Window.DataContext>
@@ -75,8 +75,8 @@
                     <ListViewItem Height="60" HorizontalAlignment="Center">
                         <Button Command="{Binding Path=AddPatientCommand}" Style="{DynamicResource MaterialDesignRaisedLightButton}" Foreground="White" Background="#58af9d" BorderBrush="#58af9d" Width="190" Height="40" VerticalAlignment="Top">
                             <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                                <materialDesign:PackIcon Kind="Add" Foreground="White" Width="25" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="-5,0,20,0"/>
-                                <TextBlock Text="{x:Static lang:UILanguage.AddPatient}" FontSize="13.5" VerticalAlignment="Center"/>
+                                <materialDesign:PackIcon Kind="Add" Foreground="White" Width="25" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="-5,0,9,0"/>
+                                <TextBlock Text="{language:Localization AddPatient}" FontSize="12" VerticalAlignment="Center"/>
                             </StackPanel>
                         </Button>
                     </ListViewItem>
@@ -90,25 +90,25 @@
                     <Button x:Name="ButtonAnalytics" Width="150" Height="150" Background="#CEE8EC" BorderBrush="#CEE8EC" Margin="0,20,0,10">
                         <StackPanel Orientation="Vertical">
                             <materialDesign:PackIcon Kind="GoogleAnalytics" Foreground="#1A365D" Width="60" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-                            <TextBlock Text="{x:Static lang:UILanguage.Analytics}" FontSize="16" FontWeight="Medium" Foreground="#1A365D" Margin="0,20,0,0"/>
+                            <TextBlock Text="{language:Localization Analytics}" FontSize="16" FontWeight="Medium" Foreground="#1A365D" Margin="0,20,0,0"/>
                         </StackPanel>
                     </Button>
                     <Button x:Name="ButtonReports" Width="150" Height="150" Background="#CEE8EC" BorderBrush="#CEE8EC" Margin="0,20,0,10">
                         <StackPanel Orientation="Vertical">
                             <materialDesign:PackIcon Kind="Book" Foreground="#1A365D" Width="60" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-                            <TextBlock Text="{x:Static lang:UILanguage.Reports}" FontSize="16" FontWeight="Medium" Foreground="#1A365D" Margin="0,20,0,0"/>
+                            <TextBlock Text="{language:Localization Reports}" FontSize="16" FontWeight="Medium" Foreground="#1A365D" Margin="0,20,0,0"/>
                         </StackPanel>
                     </Button>
                     <Button x:Name="ButtonEmployee" Width="150" Height="150" Background="#CEE8EC" BorderBrush="#CEE8EC" Margin="0,20,0,10">
                         <StackPanel Orientation="Vertical">
                             <materialDesign:PackIcon Kind="ClipboardList" Foreground="#1A365D" Width="60" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-                            <TextBlock Text="{x:Static lang:UILanguage.EmpList}" FontSize="16" FontWeight="Medium" Foreground="#1A365D" Margin="0,20,0,0"/>
+                            <TextBlock Text="{language:Localization EmpList}" FontSize="16" FontWeight="Medium" Foreground="#1A365D" Margin="0,20,0,0"/>
                         </StackPanel>
                     </Button>
                     <Button x:Name="ButtonEquipments" Width="150" Height="150" Background="#CEE8EC" BorderBrush="#CEE8EC" Margin="0,20,0,0">
                         <StackPanel Orientation="Vertical">
                             <materialDesign:PackIcon Kind="TestTube" Foreground="#1A365D" Width="60" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-                            <TextBlock Text="{x:Static lang:UILanguage.EquipList}" FontSize="16" FontWeight="Medium" Foreground="#1A365D" Margin="0,20,0,0"/>
+                            <TextBlock Text="{language:Localization EquipList}" FontSize="16" FontWeight="Medium" Foreground="#1A365D" Margin="0,20,0,0"/>
                         </StackPanel>
                     </Button>
                 </StackPanel>
